# ART_TUTO

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/source/: conf.py  index.rst  mon_app.rst
mon_app/: main_app.py
mon_app/modules/: art_tuto.ipynb  main.py
public/: .buildinfo  .buildinfo.bak  genindex.html  index.html  mon_app.html  objects.inv  py-modindex.html  search.html  searchindex.js
public/.doctrees/: environment.pickle  index.doctree  mon_app.doctree
tests/: test_processsing.py
